Updated HTML to have external image data

--- a/Practical Machine Learning Course Project.Rmd
+++ b/Practical Machine Learning Course Project.Rmd
@@ -3,7 +3,7 @@ author: "C. Haen"
 date: "4/6/2021"
 output:
   html_document:
-    df_print: paged
+      keep_md: true
 ---
 
 # Predicting Effective Exercise
